--- a/onboarding/src/App.css
+++ b/onboarding/src/App.css
@@ -1,32 +1,12 @@
+*{
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -37,3 +17,36 @@
   }
 }
 
+h1{
+  margin: 0;
+  padding: 1%;
+  color:white;
+  padding-top: 5%;
+}
+
+.user-form{
+  color:white;
+
+  width: 50%;
+  padding: 2%;
+  margin: 1% auto;
+  border: 2px solid white;
+}
+
+.label{
+  width: 50%;
+  margin: 50px
+  /* border: 2px solid white; */
+  
+  /* padding: 10%; */
+}
+
+.user-card{
+  list-style-type:none;
+  color:white;
+
+  width: 50%;
+  padding: 2%;
+  margin: 1% auto;
+  border: 2px solid white;
+}
