--- a/onboarding/src/index.css
+++ b/onboarding/src/index.css
@@ -1,13 +1,39 @@
+*{
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+}
+
 body {
+  
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
 }
+
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html, body{
+  margin: 0;
+  height: 100vh;
+     /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("gb-man.jpg");
+     /* Set a specific height */
+    /* height: 50%; */
+     /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+     background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+ 
 }
